--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,85 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;1,9..40,800&family=Inter:wght@300;400;500;600;700;800;900&display=swap');
-
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'DM Sans', sans-serif;
-    font-family: 'Inter', sans-serif;
+.active{
+    background-color: #F9D783;
 }
 
-:root{
-    --mainColor: #F0EFE9;
-    --mainColorLight: #5767aa;
-    --secondaryColor: #db2b39;
-    --textColor: black;
-} 
-  
-header{
+nav {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    height: 80px;
-    padding: 0 2rem;
-    background-color: var(--mainColor);
-    color: var(--textColor);
+    align-items: center;
+    background-color: #F0EFE9;
+    position: sticky;
+    top: 0;
 }
 
-nav a{
-    margin: 0 2rem;
-    color: var(--textColor);
-    text-decoration: none;
-}
-
-nav a:hover{
-    color: var(--secondaryColor);
-}
-
-header .nav-btn{
-    padding: 5px;
-    cursor: pointer;
-    background: transparent;
-    border: none;
-    outline: var(--textColor);
-    visibility: hidden;
-    opacity: 0;
+nav .title{
     font-size: 1.5rem;
+    margin: 1rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: aqua;
 }
 
-@media only screen and (max-width:1024px ){ 
-    header .nav-btn{ 
-        visibility: visible;
-        opacity: 1;
-    }
+nav ul{
+    display: flex;
+}
 
-    header nav{
-        position: fixed;
+nav ul li{
+    list-style: none;
+}
+
+nav ul li a{
+    display: block;
+    text-decoration: none;
+    color: #191919;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    border-radius: 0.5rem;
+}
+
+nav ul li a:not(.active):hover{
+    background-color: #191919;
+    border: 1px solid #191919
+    color #f2f2f2
+}
+
+nav .menu{
+    display: none;
+    position: absolute;
+    top: 0.75rem;
+    right: 0.5rem;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 2.25rem;
+    height: 2rem;
+
+}
+
+nav .menu span{
+    height: 0.4rem;
+    width: 100%;
+    background-color: blanchedalmond;
+    border-radius: 0.2rem;
+}
+
+
+@media (max-width: 480px) {
+    nav .menu{
         display: flex;
-        align-items: center;
-        justify-content: center;
+
+    }
+
+    nav {
         flex-direction: column;
-        gap: 1.5rem;
-        top: 0;
-        left: 0;
-        height: 100%;
-        background-color: var(--mainColor);
-        transition: 1s;
-        transform: translateY(-100vh);
+        align-items: start;
 
     }
 
-    header .responsive_nav{
-        transform: none;
-
+    nav ul{
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        margin-bottom: 0.25rem;
     }
 
-    nav .nav-close-btn {
-        position: absolute;
-        top: 2rem;
-        right: 2rem;
+    nav ul.open{
+        display: flex;
     }
 
-    nav a{
-        font-size: 1.5rem;
+    nav ul li{
+        width: 100%;
+        text-align: center;
     }
-}    
+
+    nav ul  li a {
+        margin: 0.2rem 0.5rem;
+    }
+ }    
