--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,9 +1,11 @@
 .section_padding{
     padding: 4rem 4rem;
+    margin-top: 300px
 }
 
 .footer{
     background-color: #0E1021;
+    
 }
 
 .sb_footer{
