--- a/src/assets/compnents/_buttons.scss
+++ b/src/assets/compnents/_buttons.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;1,9..40,800&family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
+html,body{
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+}
+
 .btn-theme{
     display: flex;
     justify-content: center;
@@ -12,8 +18,6 @@
     padding: 8px 22px;
     border-radius: 25px;
     transition: 0.15s ease-in-out, border 0.15s ease-in-out;
-
-
 }
 
 .btn-theme{
