--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;1,9..40,800&family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'DM Sans', sans-serif;
+/* *{
+box-sizing: border-box;
+padding: 0;
+margin: 0;
+font-family: 'DM Sans', sans-serif;
+padding: 0;  
+margin: 0;
+box-sizing: border-box;
+color: #191919;
+font-weight: 400;
+line-height: 1.5;
+font-family: "DM Sans", sans-serif;
+font-family: "Inter", sans-serif;
+
 }
+
+
+html, body {
+font-size: 16px;
+background-color: #F0EFE9;
+}
+
+main {
+display: flex;
+height: 100vh;
+align-items: center;
+justify-content: center;
+padding: 40px;
+}
+
+form {
+background-color: bisque;
+border-radius: 12px;
+padding: 30px;
+width: 100%;
+}
+form h1 {
+text-align: center;
+font-size: 1.5em;
+font-weight: 500;
+margin-bottom: 30px;
+}
+form .errorMessage {
+text-align: center;
+margin-bottom: 30px;
+color: rgba(255, 0, 0, 0.462745098);
+}
+form .input-grup {
+margin-bottom: 20px;
+}
+form .input-grup p {
+margin-top: 30px;
+margin-bottom: 10 px;
+font-weight: 500;
+font-size: 0.9em;
+}
+form .input-grup label {
+display: block;
+margin-bottom: 10px;
+}
+form .input-grup input {
+display: block;
+width: 100%;
+padding: 8px;
+}
+form .input-grup input:focus {
+outline: 2px solid #ffffff;
+} */
