--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,400;0,9..40,500;0,9..40,600;0,9..40,700;0,9..40,800;0,9..40,900;1,9..40,800&family=Inter:wght@300;400;500;600;700;800;900&display=swap');
 
-/* *{
+*{
 box-sizing: border-box;
 padding: 0;
 margin: 0;
@@ -67,4 +67,4 @@ padding: 8px;
 }
 form .input-grup input:focus {
 outline: 2px solid #ffffff;
-} */
+}
