--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,2 +1,8 @@
-@import '../compnents/base'
+@import './base';
+@import './buttons';
+@import'./header';
+@import'./showcase';
+@import'./footer';
+@import'./messagebox';
+@import'./notfound';
 
