--- a/src/components/Showcase.css
+++ b/src/components/Showcase.css
@@ -1,43 +1,27 @@
-
-.showcase{
-    background-color: #f0efe9;
-
-    .container{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      
-
-
-          .content{
-      
-            h1{
-              font-family: 'DM Sans', sans-serif;
-              font-weight: 700;
-              font-size: 86px;
-            }
-            p{
-              font-size: 20px;
-              padding-top: 50px;
-              margin-bottom: 50px;
-            }
-            a{
-              margin-right: 10px;
-
-            }
-        }
-
-        img{
-          display: none;
-          margin-right: -50px;
-
-          @media(min-width: 1200px){
-            display: block;
-
-          }
-       }
-  }
- }
-
-
-
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,500;9..40,600;9..40,700;9..40,900&family=Inter:wght@300;400;500;700;900&display=swap");
+.showcase {
+  background-color: #f0efe9;
+}
+.showcase .container {
+  justify-content: space-between;
+  align-items: center;
+}
+.showcase .container .content h1 {
+  font-family: "DM Sans" sans-serif;
+  font-weight: 700;
+  font-size: 86px;
+}
+.showcase .container .content p {
+  font-size: 20px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.showcase .container .content a {
+  margin-right: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+.showcase .container img {
+  margin-right: -50px;
+  display: grid;
+}
