Lets try to validate

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,8 +1,8 @@
 @import './base';
 @import './buttons';
-@import'./header';
-@import'./showcase';
-@import'./footer';
-@import'./messagebox';
-@import'./notfound';
+// @import'./header';
+// @import'./showcase';
+// @import'./footer';
+// @import'./messagebox';
+// @import'./notfound';
 
