--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,4 +1,4 @@
-/* .section_padding{
+.section_padding{
     padding: 4rem 4rem;
     margin-top: 300px
 }
@@ -133,4 +133,4 @@ hr{
         font-size: 27px;
         line-height: 38px;
     }
-} */
+}
