--- a/src/components/MessageBox.css
+++ b/src/components/MessageBox.css
@@ -58,3 +58,37 @@ textarea {
   width: 70%;
   height: 30%;
 }
+
+form {
+  background-color: #ffffff;
+  border-radius: 12px;
+  padding: 30px;
+  width: 100%;
+}
+form h1 {
+  text-align: center;
+  font-size: 1.5em;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+form .errorMessage {
+  text-align: center;
+  margin-bottom: 30px;
+  color: #ff0000;
+}
+form .error {
+  color: #ff0000;
+}
+form .inputBox1 .inputBox2 {
+  margin-bottom: 20px;
+}
+form .inputBox1 .inputBox2 p {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  font-weight: 500;
+  font-size: 0.9;
+}
+form .inputBox1 .inputBox2 label {
+  display: block;
+  margin-bottom: 10px;
+}
