--- a/src/components/MessageBox.scss
+++ b/src/components/MessageBox.scss
@@ -82,3 +82,44 @@ textarea{
     width: 70%;
     height: 30%;
 }
+
+
+form{
+  background-color: #ffffff;
+  border-radius: 12px;
+  padding: 30px;
+  width: 100%;
+
+  h1{
+    text-align: center;
+    font-size: 1.5em;
+    font-weight: 500;
+    margin-bottom: 30px;
+  }
+
+  .errorMessage{
+    text-align: center;
+    margin-bottom: 30px;
+    color: #ff0000;
+  }
+
+  .error{
+    color:#ff0000
+  }
+
+  .inputBox1 .inputBox2{
+    margin-bottom: 20px;
+
+      p{
+        margin-top: 30px;
+        margin-bottom: 10px;
+        font-weight: 500;
+        font-size: 0.9;
+      }
+
+      label{
+        display: block;
+        margin-bottom: 10px;
+      }
+  }
+}
